--- a/notebooks/01_python_basics.ipynb
+++ b/notebooks/01_python_basics.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Python basics",
-      "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +12,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/christinahtay/PythonPractice/blob/main/notebooks/01_python_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -982,17 +970,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jlgyu65SaUvr"
+        "id": "jlgyu65SaUvr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9aedcd0c-d88c-4473-ee15-1cbb9ddc441b"
       },
       "source": [
         "def relu(x):\n",
-        "  # Write your function here\n",
-        "  return\n",
+        "  if (x >= 0):\n",
+        "      return x\n",
+        "  return 0\n",
         "\n",
         "relu(-3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1008,22 +1012,24 @@
       "metadata": {
         "id": "-IH-BD41bI1u",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f45bf668-d55b-494d-ecd7-2f421cbacf15"
+        "outputId": "1b07ef46-875c-4e46-c554-26459c4f812c"
       },
       "source": [
+        "import math\n",
         "def euclidean_norm(vector):\n",
-        "  # Write your function here\n",
-        "  return\n",
+        "  total = 0\n",
+        "  for i in vector:\n",
+        "    total += i**2\n",
+        "  return math.sqrt(total)\n",
         "\n",
         "import numpy as np\n",
         "my_vector = [0.5, -1.2, 3.3, 4.5]\n",
         "# The result should be roughly 5.729746940310715\n",
         "euclidean_norm(my_vector)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1032,10 +1038,8 @@
               "5.729746940310715"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 13
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     },
