--- a/notebooks/01_python_basics.ipynb
+++ b/notebooks/01_python_basics.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Python basics",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -1059,10 +1060,13 @@
       },
       "source": [
         "def vector_maximum(vector):\n",
-        "  # Write your function here\n",
-        "  return"
+        "  max = -9999999999\n",
+        "  for i in vector:\n",
+        "    if i > max:\n",
+        "      max = i\n",
+        "  return max"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1088,7 +1092,7 @@
         "# Should return [-3, 1, 2, 3]\n",
         "bubble_sort(my_list)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
