--- a/notebooks/01_python_basics.ipynb
+++ b/notebooks/01_python_basics.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Python basics",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/christinahtay/PythonPractice/blob/main/notebooks/01_python_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -177,7 +188,7 @@
         "id": "xda0ecsmkarI",
         "outputId": "f6462b21-2287-4519-8e3c-daa63e8711b1"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -985,7 +996,7 @@
         "\n",
         "relu(-3)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1030,7 +1041,7 @@
         "# The result should be roughly 5.729746940310715\n",
         "euclidean_norm(my_vector)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1077,7 @@
         "      max = i\n",
         "  return max"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1081,19 +1092,72 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sBokdJO4dGyf"
+        "id": "sBokdJO4dGyf",
+        "outputId": "0f891745-86e9-468a-fbec-ed587c8c2fcc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "def bubble_sort(my_list):\n",
-        "  # Write your function here\n",
-        "  return\n",
+        "  n = len(my_list)\n",
+        "  step = 1\n",
+        "  for i in range(n):\n",
+        "    print(f\"Pass {i+1}:\")\n",
+        "    swapped = False\n",
+        "    for j in range (0, n - i - 1):\n",
+        "      print(f\" Compare {my_list[j]} and {my_list[j+1]}\")\n",
+        "      if my_list[j] > my_list [j+1]:\n",
+        "        my_list[j], my_list[j+1] =my_list[j+1], my_list[j]\n",
+        "        swapped = True\n",
+        "        print(f\" Swap -> {my_list}\")\n",
+        "      else:\n",
+        "        print(f\" No swap\")\n",
+        "    if not swapped:\n",
+        "      print(\" No swaps this pass, list is sorted\")\n",
+        "      break\n",
+        "    print(f\"After pass {i+1}: {my_list}\\n\")\n",
+        "\n",
+        "  return my_list\n",
         "\n",
         "my_list = [1, -3, 3, 2]\n",
         "# Should return [-3, 1, 2, 3]\n",
         "bubble_sort(my_list)"
       ],
-      "execution_count": 7,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pass 1:\n",
+            " Compare 1 and -3\n",
+            " Swap -> [-3, 1, 3, 2]\n",
+            " Compare 1 and 3\n",
+            " No swap\n",
+            " Compare 3 and 2\n",
+            " Swap -> [-3, 1, 2, 3]\n",
+            "After pass 1: [-3, 1, 2, 3]\n",
+            "\n",
+            "Pass 2:\n",
+            " Compare -3 and 1\n",
+            " No swap\n",
+            " Compare 1 and 2\n",
+            " No swap\n",
+            " No swaps this pass, list is sorted\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-3, 1, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
