--- a/notebooks/01_python_basics.ipynb
+++ b/notebooks/01_python_basics.ipynb
@@ -1093,10 +1093,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "sBokdJO4dGyf",
-        "outputId": "0f891745-86e9-468a-fbec-ed587c8c2fcc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0f891745-86e9-468a-fbec-ed587c8c2fcc"
       },
       "source": [
         "def bubble_sort(my_list):\n",
@@ -2008,29 +2008,40 @@
       "metadata": {
         "id": "gvPe_JAO6mvF",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4952000d-c255-4cd0-8b12-51bcb59ba53b"
+        "outputId": "64517385-3158-4c35-b13d-13d3ee964e2b"
       },
       "source": [
+        "import numpy as np\n",
+        "array_A = np.random.rand(5,3)\n",
+        "print(array_A)\n",
         "array_A.T"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.31599512 0.95479664 0.57227379]\n",
+            " [0.30361466 0.04547953 0.31098406]\n",
+            " [0.16526409 0.53890088 0.8631955 ]\n",
+            " [0.73719727 0.28113141 0.97486296]\n",
+            " [0.22054294 0.70990088 0.16376306]]\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.83246658, 0.86545167, 0.62386601, 0.473339  , 0.06991272],\n",
-              "       [0.02185012, 0.93435538, 0.93170156, 0.0036374 , 0.7230155 ],\n",
-              "       [0.08128956, 0.83778882, 0.96709345, 0.66291745, 0.2734715 ]])"
+              "array([[0.31599512, 0.30361466, 0.16526409, 0.73719727, 0.22054294],\n",
+              "       [0.95479664, 0.04547953, 0.53890088, 0.28113141, 0.70990088],\n",
+              "       [0.57227379, 0.31098406, 0.8631955 , 0.97486296, 0.16376306]])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 46
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     },
@@ -2057,16 +2068,27 @@
       "metadata": {
         "id": "0kPhv2xcF1TP",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a7315cac-0495-44da-e497-63aa677b8d47"
+        "outputId": "1d0cb47c-025a-4746-9ded-e3eb0f37d7e3"
       },
       "source": [
+        "import numpy as np\n",
+        "ten = np.arange(10)\n",
+        "print(ten)\n",
+        "print(ten[5:])\n",
         "np.arange(10)[5:]"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n",
+            "[5 6 7 8 9]\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -2074,10 +2096,8 @@
               "array([5, 6, 7, 8, 9])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 61
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     },
@@ -2095,18 +2115,25 @@
       "metadata": {
         "id": "8tlZzTB6GEyw",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a2918cd3-f33b-48de-cd18-a3a8b1fb2fab"
+        "outputId": "aee59d36-7a92-4443-ce04-f8ec9df31a94"
       },
       "source": [
         "x = np.arange(10)\n",
+        "print(x)\n",
         "mask = x >= 5\n",
         "x[mask]"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -2114,10 +2141,8 @@
               "array([5, 6, 7, 8, 9])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 62
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     },
@@ -2142,11 +2167,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "v1ed4-vLUWXQ"
+        "id": "v1ed4-vLUWXQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "862d345a-fa35-4806-9cec-4c3122b656d8"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "import numpy as np\n",
+        "arr = np.array([[[1,2],[3,4]],[[5,6],[7,8]]])\n",
+        "print(arr[0,0,0])\n",
+        "print(arr[1,1,1])\n",
+        "print(\"First layer:\\n\", arr[0])\n",
+        "print(\"Second layer, first column of each row:\\n\", arr[1, :, 0])\n",
+        "print(\"All layers, first row:\\n\", arr[:, 0, :])"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "8\n",
+            "First layer:\n",
+            " [[1 2]\n",
+            " [3 4]]\n",
+            "Second layer, first column of each row:\n",
+            " [5 7]\n",
+            "All layers, first row:\n",
+            " [[1 2]\n",
+            " [5 6]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
